search-result page done

--- a/src/app/shared/components/deals-cards/deals-cards.component.html
+++ b/src/app/shared/components/deals-cards/deals-cards.component.html
@@ -32,8 +32,43 @@
 </div> -->
 <!-- Responsive deal cards -->
 
-<div class="row mx-2">
-    <div class="col-12 col-sm-6 col-lg-4">
+<div class="row mx-lg-2 mx-2">
+    <div class="col-12 col-sm-6 col-lg-4 py-2">
+        <mdb-card>
+            <div class="img-fav">
+                <i class="far fa-heart fa-lg pink-text"></i>
+                <!-- <i *ngIf="deal.isFavourite" (click)="removeFromFavourite(deal)" class="fas fa-heart fa-lg pink-text"></i> -->
+
+                <mdb-card-img class="main-img" src="https://images.pexels.com/photos/3974152/pexels-photo-3974152.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Card image cap"></mdb-card-img>
+                <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
+                <h5><span class="badge badge-default font-weight-normal">Udaipur tour with Barkha Joshi</span></h5>
+            </div>
+            <!-- Card content -->
+            <div class="mt-3 mb-3 mx-3">
+                <!-- Title -->
+                <mdb-card-title class="mt-1">
+                    <h5><strong>Nandpur Fort Tour</strong></h5>
+                </mdb-card-title>
+
+                <!-- Text -->
+                <div>
+                    <!-- <div>Awadhnagar, Ranibaag, local delicacies</div> -->
+                    <div><i class="fa fa-star star pink-text" aria-hidden="true" style=" display:inline-block;
+                        vertical-align: 3px;"></i> &nbsp;4.0&nbsp;(12) &#8226; From 4th July | 4pm To 9pm</div>
+                </div>
+
+
+                <div class="mt-2">
+                    <div class="float-left">
+                        <h4 class="mb-0">₹ 1200</h4>
+                        <div class="mt-0 grey-text">per person</div>
+                    </div>
+                    <button mdbBtn type="button" class="font-weight-bold btn-brown float-right white-text" mdbWavesEffect>Book Deal</button>
+                </div>
+            </div>
+        </mdb-card>
+    </div>
+    <div class="col-12 col-sm-6 col-lg-4 py-2">
         <mdb-card>
             <div class="img-fav">
                 <i class="far fa-heart fa-lg pink-text"></i>
@@ -68,7 +103,7 @@
             </div>
         </mdb-card>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
+    <div class="col-12 col-sm-6 col-lg-4 py-2">
         <mdb-card>
             <div class="img-fav">
                 <i class="far fa-heart fa-lg pink-text"></i>
@@ -103,41 +138,7 @@
             </div>
         </mdb-card>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
-        <mdb-card>
-            <div class="img-fav">
-                <i class="far fa-heart fa-lg pink-text"></i>
-                <!-- <i *ngIf="deal.isFavourite" (click)="removeFromFavourite(deal)" class="fas fa-heart fa-lg pink-text"></i> -->
 
-                <mdb-card-img class="main-img" src="https://images.pexels.com/photos/3974152/pexels-photo-3974152.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Card image cap"></mdb-card-img>
-                <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
-                <h5><span class="badge badge-default font-weight-normal">Udaipur tour with Barkha Joshi</span></h5>
-            </div>
-            <!-- Card content -->
-            <div class="mt-3 mb-3 mx-3">
-                <!-- Title -->
-                <mdb-card-title class="mt-1">
-                    <h5><strong>Nandpur Fort Tour</strong></h5>
-                </mdb-card-title>
-
-                <!-- Text -->
-                <div>
-                    <!-- <div>Awadhnagar, Ranibaag, local delicacies</div> -->
-                    <div><i class="fa fa-star star pink-text" aria-hidden="true" style=" display:inline-block;
-                        vertical-align: 3px;"></i>&nbsp;4.0&nbsp;(12) &#8226; From 4th July | 4pm To 9pm</div>
-                </div>
-
-
-                <div class="mt-2">
-                    <div class="float-left">
-                        <h4 class="mb-0">₹ 1200</h4>
-                        <div class="mt-0 grey-text">per person</div>
-                    </div>
-                    <button mdbBtn type="button" class="font-weight-bold btn-brown float-right white-text" mdbWavesEffect>Book Deal</button>
-                </div>
-            </div>
-        </mdb-card>
-    </div>
 </div>
 
 
