--- a/src/app/modules/guide/components/profile/profile.component.html
+++ b/src/app/modules/guide/components/profile/profile.component.html
@@ -287,7 +287,7 @@
 
 
 <div style="overflow-y: auto" mdbModal #editpersonal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg " role="document">
+    <div class="modal-dialog modal-dialog-centered " role="document">
         <div class="modal-content">
             <div class="modal-header" style="background-color: rgba(3, 169, 244, 0.7); color: white; ">
                 <button type="button" class="close pull-right" aria-label="Close" (click)="editpersonal.hide()">
@@ -392,7 +392,7 @@
 </div>
 <!-- add business modal -->
 <div style="overflow-y: auto" mdbModal #editbusiness="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myeditbusinessLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header" style="background-color: rgba(233, 30, 99, 0.7); color: white; ">
                 <button type="button" class="close pull-right" aria-label="Close" (click)="editbusiness.hide()">
@@ -437,7 +437,7 @@
 
 <!-- add experience modal -->
 <div style="overflow-y: auto" mdbModal #editexperience="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myeditexperienceLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header" style="background-color: rgba(233, 30, 99, 0.7); color: white; ">
                 <button type="button" class="close pull-right" aria-label="Close" (click)="editexperience.hide()">
