search search ufff

--- a/src/app/modules/tourists/components/guides-list/guides-list.component.html
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.html
@@ -1,5 +1,4 @@
 <h1 class="mx-3 mb-2"> Pick Your Guide</h1>
-
 <div class="request-card d-none d-md-block">
 
     <mdb-card class="w-auto ml-lg-4 my-3 mx-md-3">
@@ -31,7 +30,7 @@
 
                             <div class="py-2">
                                 <!-- <mdb-icon fas icon="globe" class="purple-text pr-1"></mdb-icon>&nbsp;<h5>Speaks{{guide?.languages.toString()}}</h5> -->
-                                <mdb-icon fas icon="globe" size="lg" class="green-text pr-1"></mdb-icon>&nbsp;Speaks Hindi, English and French
+                                <mdb-icon fas icon="globe" size="lg" class="green-text pr-1"></mdb-icon>&nbsp;Speaks Hindi and English
 
                             </div>
 
@@ -90,9 +89,6 @@
                     <li class="nav-item">
                         <a class="nav-link" id="rating-tab" data-toggle="tab" href="#rating" role="tab" aria-controls="rating" aria-selected="false">Reviews</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Locations</a>
-                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" id="deal-tab" data-toggle="tab" href="#deal" role="tab" aria-controls="deal" aria-selected="false">Deals</a>
                     </li>
@@ -225,13 +221,7 @@
 
                                     <img src="https://images.pexels.com/photos/3974152/pexels-photo-3974152.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img-fluid" alt="">
                                     <div class="mask rgba-purple-light white-text">
-                                        <!-- <div class="float-right mx-2 mt-1"> <i class="fa fa-star star" aria-hidden="true"></i>
-                                            <i class="fa fa-star star" aria-hidden="true"></i>
-                                            <i class="fa fa-star star" aria-hidden="true"></i>
-                                            <i class="fa fa-star star" aria-hidden="true"></i>
-                        
-                                            <div style="font-size:12px;">(22 REVIEWS)</div>
-                                        </div> -->
+
                                         <div class="text-center" style="overflow-wrap: break-word;">
                                             <h5>Nandpur Fort Tour</h5>
 
@@ -373,7 +363,7 @@
 
                 </div>
                 <div style="position:absolute; bottom:6px; right:10px;" class="float-right">
-                    <div class="text-center">₹500/day</div>
+                    <div class="text-center">₹1000/day</div>
 
                     <button type="button" style=" border: 1px solid black; font-size: 15px;" class="white black-text my-2" mdbWavesEffect>BOOK NOW!</button>
 
