--- a/src/app/modules/tourists/components/deals-list/deals-list.component.html
+++ b/src/app/modules/tourists/components/deals-list/deals-list.component.html
@@ -1,4 +1,4 @@
-<h2 class="m-3">Deals</h2>
+<!-- <h2 class="m-3">Deals</h2> -->
 <!-- <app-deals-cards></app-deals-cards> -->
 <app-deals-cards [dealsList]="searchService.dealsList"></app-deals-cards>
 
