--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
-<div *ngIf="ShowLoadingIndicator" class="loader">
+<!-- <div *ngIf="ShowLoadingIndicator" class="loader">
   <span></span>
   <span></span>
   <span></span>
   <span></span>
-</div>
+</div> -->
 <router-outlet></router-outlet>
 <!-- <app-footer></app-footer> -->
