--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -1,3 +1,25 @@
-<p>
-  about works!
-</p>
+<mdb-card style="background-image: url('https://mdbootstrap.com/img/Photos/Others/gradient1.jpg')">
+  <div class="text-white text-center py-5 px-4 my-5">
+    <div>
+      <img class="img-fluid card-title pt-3 mb-5 font-bold" src="../../../../assets/images/areoplane white.png" alt="">
+      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Voila an social guide and Tours booking Paltform</strong></h2>
+      <p class="mx-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam,
+        voluptatem,
+        optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
+        dolorum!
+      </p>
+    </div>
+  </div>
+</mdb-card>
+<mdb-card>
+  <div class="text-center py-5 px-4 my-5">
+    <div>
+      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Meet Your developers</strong></h2>
+      <p class="mx-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam,
+        voluptatem,
+        optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
+        dolorum!
+      </p>
+    </div>
+  </div>
+</mdb-card>
