--- a/src/app/modules/tourists/components/messages/messages.component.scss
+++ b/src/app/modules/tourists/components/messages/messages.component.scss
@@ -1,6 +1,6 @@
-.chatRow {
-    bottom: 0px !important;
-    margin-bottom: 0px !important;
-    position: relative;
-    max-height: 800px;
-}
+// .chatRow {
+//     bottom: 0px !important;
+//     margin-bottom: 0px !important;
+//     position: relative;
+//     max-height: 800px;
+// }
