--- a/src/app/modules/guide/components/deals/deals.component.html
+++ b/src/app/modules/guide/components/deals/deals.component.html
@@ -17,34 +17,27 @@
     </div>
     <div class="mx-5 mb-5">
         <h1>Your Deals</h1>
-        <div class="row my-3 ">
+        <app-deals-cards [dealsList]="DealsList" [role]="'guide'"></app-deals-cards>
+        <!-- <div class="row my-3 ">
             <div class="col-md-4 py-4" *ngFor="let deal of DealsList">
                 <mdb-card>
                     <div class="img-fav">
-                        <!-- <i class="far fa-heart fa-lg"></i> -->
-                        <!--Card image-->
                         <mdb-card-img class="main-img" src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
                         <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
                         <h5><span class="badge badge-default font-weight-normal">{{deal.city}} tour with Barkha Joshi</span></h5>
                     </div>
-                    <!--Card content-->
                     <mdb-card-body>
-                        <!--Title-->
                         <mdb-card-title>
                             <h5><strong>{{deal.places[0]}} Tour</strong></h5>
                         </mdb-card-title>
-    
-                        <!--Text-->
                         <mdb-card-text>
                             <div>{{deal.places.toString()}}.</div>
                             <div>&#x20b9;{{deal.price}} pp &#8226; From {{deal.startDate | date: 'dd-MM-yy'}} &#8226; To {{deal.endDate | date: 'dd-MM-yy'}}</div>
                         </mdb-card-text>
-    
-                        <!-- <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a> -->
                     </mdb-card-body>
                 </mdb-card>
             </div>
-        </div>
+        </div> -->
     </div>    
 </div>
 
