--- a/src/app/modules/tourists/components/messages/messages.component.html
+++ b/src/app/modules/tourists/components/messages/messages.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container-fluid">
     <div class="row chatRow">
         <!-- <div class="col-sm-3">
             <app-chat-history-list></app-chat-history-list>
@@ -6,6 +6,8 @@
         <div class="col-sm-9">
             <app-chats></app-chats>
         </div> -->
-        <router-outlet></router-outlet>
+        <div class="col px-0">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
