--- a/src/app/shared/components/deals-cards/deals-cards.component.html
+++ b/src/app/shared/components/deals-cards/deals-cards.component.html
@@ -36,8 +36,8 @@
     <div class="col-12 col-sm-6 col-md-5 col-lg-5 py-2 mb-4" *ngFor="let deal of dealsList" >
         <mdb-card>
             <div class="img-fav">
-                <i *ngIf="!isFavourite(deal)" (click)="addToFavourite(deal)" class="far fa-heart fa-lg pink-text"></i>
-                <i *ngIf="isFavourite(deal)" (click)="removeFromFavourite(deal)" class="fas fa-heart fa-lg pink-text"></i>
+                <i *ngIf="!isFavourite(deal) && role !== 'guide'" (click)="addToFavourite(deal)" class="far fa-heart fa-lg pink-text"></i>
+                <i *ngIf="isFavourite(deal) && role !== 'guide'" (click)="removeFromFavourite(deal)" class="fas fa-heart fa-lg pink-text"></i>
 
                 <mdb-card-img class="main-img" 
                 src="https://images.pexels.com/photos/3974152/pexels-photo-3974152.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
@@ -45,7 +45,7 @@
                 <img class="card-img rounded-circle" 
                 src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" 
                 style="width:70px; height:70px; border:white 3px solid;" alt="">
-                <h5><span class="badge badge-default font-weight-normal">Udaipur tour with Barkha Joshi</span></h5>
+                <h5><span class="badge badge-default font-weight-normal">{{deal.state | titlecase}} tour</span></h5>
             </div>
             <!-- Card content -->
             <div class="mt-3 mb-3 mx-3">
@@ -71,7 +71,8 @@
                         <h4 class="mb-0">₹ {{deal.price}}</h4>
                         <div class="mt-0 grey-text">per person</div>
                     </div>
-                    <button mdbBtn type="button" class="font-weight-bold btn-brown float-right white-text" mdbWavesEffect>Book Deal</button>
+                    <button  *ngIf="role !== 'guide'" mdbBtn type="button" class="font-weight-bold btn-brown float-right white-text" mdbWavesEffect>Book Deal</button>
+                    <button  *ngIf="role === 'guide'" mdbBtn type="button" class="font-weight-bold btn-brown float-right white-text" mdbWavesEffect>View Deal</button>
                 </div>
             </div>
         </mdb-card>
