--- a/src/app/shared/components/guide-profile/guide-profile.component.html
+++ b/src/app/shared/components/guide-profile/guide-profile.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-4 pr-4">
             <!--Card-->
             <!-- cascade="true" -->
-            <mdb-card class="sticky">
+            <mdb-card class="sticky mt-4">
                 <div class="container mt-4">
                     <div class="row">
 
@@ -16,7 +16,7 @@
                             <!--/Card image-->
                         </div>
                         <div class="col-md-8">
-                            <h2>{{guide?.name}}</h2>
+                            <h2>Aradhna Bhatnagar</h2>
                             <div>
                                 <mdb-icon fas icon="star"></mdb-icon>
                                 <mdb-icon fas icon="star"></mdb-icon>
@@ -34,25 +34,25 @@
                 <hr class="myt-4 mx-3 mb-0">
                 <!-- cascade="true" -->
 
-                <mdb-card-body>
+                <mdb-card-body style="font-size: 18px !important;">
                     <!--Card content-->
                     <!-- <h4 class="card-title">
                         <strong>Billy Cullen</strong>
                     </h4> -->
                     <!-- Guide biodata -->
-                    <div>
+                    <div class="py-2">
                         <mdb-icon fas icon="check-circle" class="purple-text pr-1"></mdb-icon>Verified <strong>Local Tour Guide</strong>
                     </div>
-                    <div>
+                    <div class="py-2">
                         <mdb-icon fas icon="map-marker-alt" class="purple-text pr-1"></mdb-icon>Lives in <strong>{{guide?.city}}, {{guide?.state}}</strong>
                     </div>
-                    <div>
+                    <div class="py-2">
                         <mdb-icon fas icon="birthday-cake" class="purple-text pr-1"></mdb-icon><strong>27 years old</strong>
                     </div>
-                    <div>
+                    <div class="py-2">
                         <mdb-icon fas icon="globe" class="purple-text pr-1"></mdb-icon>Speaks <strong>{{guide?.languages.toString()}}</strong>
                     </div>
-                    <div>
+                    <div class="py-2">
                         <mdb-icon fas icon="heart" class="purple-text pr-1"></mdb-icon>Loves <strong>{{guide?.interests.toString()}}</strong>
                     </div>
 
@@ -70,12 +70,42 @@
             <!--/.Card-->
         </div>
         <div class="col-md-8">
-            <h2>hello people</h2>
-            <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" class="img-fluid z-depth-2" style="height:430px; width:750px">
+            <!-- <h2>hello people</h2> -->
+            <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" class="mt-4 img-fluid z-depth-2" style="height:430px; width:750px">
             <br>
             <br>
-            <div>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-                pretium quis, sem. Nulla consequat massa quis enim.Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede
+            <div>
+                <h2>Reviews</h2>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6>
+                            <mdb-badge pill="true" primary="true">4.2</mdb-badge>
+                        </h6>
+                        <p><b>Alexa sexy</b></p>
+                    </div>
+                    <div class="col-sm-9" style="border-left: 1px solid rgba(128, 128, 128, 0.308);">
+                        <mdb-badge class="float-right" pill="true" info="true">Voila approved &nbsp;
+                            <mdb-icon fas icon="check-double"></mdb-icon>
+                        </mdb-badge>&nbsp;
+                        <p>Greate Experience and a really cool and hot man to roam with</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6>
+                            <mdb-badge pill="true" danger="true">2.2</mdb-badge>
+                        </h6>
+                        <p><b>Hot Natasha</b></p>
+                    </div>
+                    <div class="col-sm-9" style="border-left: 1px solid rgba(128, 128, 128, 0.308);">
+                        <mdb-badge class="float-right" pill="true" info="true">Voila approved &nbsp;
+                            <mdb-icon fas icon="check-double"></mdb-icon>
+                        </mdb-badge>&nbsp;
+
+                        <p>Great Experience and a really cool and hot man to roam with</p>
+                    </div>
+                </div>
             </div>
             <!-- Card -->
             <div class="card my-4 bgclass">
